--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "pg": "^8.3.0",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reflect-metadata": "^0.1.13",
